force-app/main/default/objects/Order_Line_Items__c/fields/Line_Amout__c.field-meta.xml
<CustomField>
    <fullName>Line_Amout__c</fullName>
    <formula>Quantity__c * Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Amout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>