force-app/main/default/objects/Order_Line_Items__c/validationRules/Is_Active_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Active_Product</fullName>
    <active>true</active>
    <errorConditionFormula>Product__r.IsActive == false</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product Not Active</errorMessage>
</ValidationRule>