force-app/main/default/objects/Order_Line_Items__c/validationRules/Quantity_Must_be_Greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_be_Greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity Can be Zero or Negative</errorMessage>
</ValidationRule>